# ColBERT-X

./: pyproject.toml
scripts/: aggregate_passage_scores.py  create_passage_corpus.py  create_topic_tsv.py
xlmr_colbert/: index.py  index_faiss.py  parameters.py  rerank.py  retrieve.py  test.py  train.py
xlmr_colbert/evaluation/: load_model.py  loaders.py  metrics.py  ranking.py  ranking_logger.py
xlmr_colbert/indexing/: encoder.py  faiss.py  faiss_index.py  faiss_index_gpu.py  loaders.py
xlmr_colbert/modeling/: colbert.py  inference.py
xlmr_colbert/modeling/tokenization/: __init__.py  doc_tokenization.py  query_tokenization.py  utils.py
xlmr_colbert/ranking/: batch_reranking.py  batch_retrieval.py  faiss_index.py  index_part.py  index_ranker.py  rankers.py  reranking.py  retrieval.py
xlmr_colbert/training/: eager_batcher.py  lazy_batcher.py  training.py  utils.py
xlmr_colbert/utils/: amp.py  distributed.py  logging.py  parser.py  runs.py  utils.py
