[tool.poetry]
name = "xlmr_colbert"
version = "1.0.0"
description = ""
authors = ["JHU Human Language Technology Center of Excellence"]
packages = [
  { include = "xlmr_colbert" }
]
classifiers=[
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
torch = "^1.12.1"
ujson = "^5.5.0"
mlflow = "^1.30.0"
transformers = "^4.23.1"
faiss-cpu = "^1.7.2"
tensorboard = "^2.10.1"
sentencepiece = "^0.1.97"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
known_third_party = [
  "black",
  "click",
  "click_option_group",
  "matplotlib",
  "mypy",
  "numpy",
  "pandas",
  "pylint",
  "pytest",
  "scipy",
  "setuptools",
  "sklearn",
  "torch",
  "tqdm",
  "wandb",
]
known_future_library = []
extra_standard_library = ["dataclasses", "__future__", "typing_extensions"]
line_length = 88
profile = "black"
force_sort_within_sections = "True"
classes = ["MISSING", "TYPE_CHECKING", "LAFTR"]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportMissingTypeArgument = "none"
exclude = ["outputs", "multirun", "results", "data", "local_logging", "venv", "artifacts", "hydra_plugins", "external_confs", "conf"]
